Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  width: 100vw;
+  overflow: hidden;
   background-color: #131520;  
 }
 
